--- a/src/app/dialog2/dialog2.component.html
+++ b/src/app/dialog2/dialog2.component.html
@@ -7,12 +7,12 @@
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Redevable</mat-label>
-            <input formControlName="redevable" matInput placeholder="CIN" >
+            <input formControlName="redevable" matInput placeholder="CIN" [readonly]="readOnly" >
         </mat-form-field>
 
         <mat-form-field appearance="outline">
             <mat-label>Local</mat-label>
-            <input formControlName="local" matInput placeholder="Reference">
+            <input formControlName="local" matInput placeholder="Reference" [readonly]="readOnly">
         </mat-form-field>
 
         <mat-form-field appearance="outline">
