--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,79 @@
-  <mat-toolbar style="background-color: rgba(135, 207, 235, 0.349);   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);  ">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>timeline</mat-icon>
-    </button>
-    <span>TaxeBoisson</span>
-    <span class="example-spacer"></span>
-    <div class="routing">
-      <button ><a  [routerLink]="['/home']">Home</a></button>
-      <button ><a  [routerLink]="['/tauxTaxeTrimestrielle']">Taux</a></button>
-      <button><a [routerLink]="['/taxeTrimestrielle']">Taxe</a></button>
-    </div>
-    <!-- <button mat-raised-button color="warn" (click)="openDialog1()">new Taux</button>
-    <button mat-raised-button color="warn" (click)="openDialog2()">new Taxe</button> -->
+<div style="height: 80vh; z-index: 1;" fxLayout="column">
+  <mat-toolbar color="primary" >
+    <mat-toolbar-row style="width: auto; cursor: pointer;">
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" >
+        <mat-icon >timeline</mat-icon>
+      </button>
+      <span >TaxeBoisson</span>
+      <span class="example-spacer"></span>
+      <div fxLayout="row" fxLayoutAlign="end center" class="navbar-items" fxHide.lt-md>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+      
+        <a  [routerLink]="['/home']" mat-list-item>
+          <span  >Home</span>
+        </a>
+        <a [routerLink]="['/tauxTaxeTrimestrielle']" mat-list-item>
+          <span >Taux</span>
+        </a>
+        <a [routerLink]="['/taxeTrimestrielle']" mat-list-item>
+          <span>Taxe</span>
+        </a>
+        <a [routerLink]="['/notificationLocal']" mat-list-item>
+          <span>Notification</span>
+        </a>
+        <a  href="#" mat-list-item>
+          <span >Redevable</span>    
+        </a>
+        <a href="#" mat-list-item>
+          <span>Local</span>
+        </a>
+      </div>
+    </mat-toolbar-row>
   </mat-toolbar>
-  <div class="content">
-    <div class="container">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+
+  <mat-sidenav-container fxFlexFill>
+    <mat-sidenav #sidenav>
+      <mat-nav-list>
+        <a  [routerLink]="['/home']" mat-list-item>
+          <mat-icon>notifications</mat-icon>
+          Home
+        </a>
+        <a [routerLink]="['/tauxTaxeTrimestrielle']" mat-list-item>
+          <mat-icon>message</mat-icon>
+          Taux</a>
+        <a [routerLink]="['/taxeTrimestrielle']" mat-list-item>
+          <mat-icon>account_box</mat-icon>
+          Taxe
+        </a>
+        <a [routerLink]="['/notificationLocal']" mat-list-item>
+          <mat-icon>lock</mat-icon>
+          Notification
+        </a>
+        <a href="#" mat-list-item>
+          <mat-icon>lock</mat-icon>
+          Redevable
+        </a>
+        <a href="#" mat-list-item>
+          <mat-icon>lock</mat-icon>
+          Local
+        </a>
+        
+
+        <a (click)="sidenav.toggle()" mat-list-item>
+          <mat-icon>close</mat-icon> Close
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>
+     
+
+      <div class="content">
+          <div class="container" >
+          <router-outlet></router-outlet>
+          </div>
+        </div>
  
+    </mat-sidenav-content>
