--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -1,7 +1,7 @@
 .container {
     display: inline-flex;
     max-width: 100%;
-    height: 90vh;
+    height: 80vh;
     background-color: rgb(245, 244, 244);
     margin: 5vh auto;
     padding: 0;
@@ -17,7 +17,7 @@
       .info-cards{
          width: 44%;
          height:75vh ;
-         margin-top: 8%;
+         margin-top: 0%;
          margin-left: 3%;
          background-color: aqua;
          border-radius: 10px;
@@ -29,7 +29,7 @@
         width: 58%;
         height: 73.5vh;
         margin-left: 4%;
-        margin-top: 7%;
+        margin-top: 0%;
         margin-right: 1%;
         line-height: 1.5;
         background-color: white;
@@ -55,7 +55,7 @@
     .searchBar {
       position: absolute;
       display: inline-flex;
-      top: 17%;
+      top: 1%;
       background-color: rgb(108, 176, 253);
       width: 73.5%;
       height: 10vh;
@@ -67,6 +67,7 @@
       .myinput {
         width: 40%;
         margin-top: 3.5vh;
+        
   
         input {
           padding: 0;
@@ -124,3 +125,15 @@
     background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 
   }
+
+
+  .header{
+    height: 7vh;
+  //  background-image: url("../../../assets/images/taxebackground.png")  ;  
+    background-size: 50% 100%;
+    opacity:0.5 ;
+}
+
+.big-container{
+  background-color: #ffffff;
+}
