--- a/src/app/view/taxe-trimestrielle/taxe-trimestrielle.component.html
+++ b/src/app/view/taxe-trimestrielle/taxe-trimestrielle.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="height: 100vh;">
     <div style="margin-top: 10px;">
          <div class="head" >
             <mat-form-field style="max-width:90%;">
@@ -8,8 +8,8 @@
               <button  class="add-button" mat-button (click)="openDialog2()">Add</button>
             </div> 
           
-          <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" matSort style="background-color: white;">
+          <div class="mat-elevation-z8" >
+            <table mat-table [dataSource]="dataSource" matSort style="background-color: white">
           
               <!-- ID Column -->
               <ng-container matColumnDef="id">
@@ -102,6 +102,9 @@
                     <button mat-icon-button color="warn" (click)="deleteTaxe(row.reference)">
                         <mat-icon>delete</mat-icon>
                     </button>
+                    <button mat-icon-button color="warn" (click)="openDialog5(row.reference)">
+                      <mat-icon class="green-icon">assignment</mat-icon>
+                  </button>
                 </td>
               </ng-container>
 
