--- a/src/app/view/taxe-trimestrielle/taxe-trimestrielle.component.scss
+++ b/src/app/view/taxe-trimestrielle/taxe-trimestrielle.component.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 80%;
+    width: 104%;
     margin: 0 auto;
     
     mat-form-field {
@@ -17,18 +17,19 @@
     
     .add-button {
       margin: 0 auto;
-      padding:25px 60px;
+      padding:27px 60px;
       margin-bottom: 19px;
       margin-left: 5px;
+      width: 10%;
     }
     .add-button:hover{
       border-bottom: 1px solid black;
-  }
+     }
   }
   
   .mat-elevation-z8 {
     overflow-x: auto;
-    max-width: 80%;
+    width: 104%;
     margin: 0 auto;
     margin-top: 10px;
     
@@ -38,5 +39,14 @@
   }
 }
 .action{
-  width: 50px;
+  width: 600px;
+}
+.green-icon {
+  color: green;
+}
+
+td{
+margin: 0;
+padding: 0 2px;
+text-align: center;
 }
